--- a/Hospital (1)/Hospital/pom.xml
+++ b/Hospital (1)/Hospital/pom.xml
@@ -15,9 +15,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.0.31</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- Use the latest version available -->
         </dependency>
     </dependencies>
 
